# konvertik

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: konvertik.db
src/: main.py
src/api/: downloads.py  formats.py  tasks.py
src/core/: config.py  db.py  lifespan.py
src/models/: task.py
src/schemas/: task.py
src/services/: converter.py  formats.py  probe.py  quota.py  retention.py
src/storage/: local.py
src/tasks/: worker.py
static/: index.html
static/css/: main.css
static/js/: app.js
